[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/DeadEnemies.gd" type="Script" id=1]
[ext_resource path="res://Enemies/flythingy.png" type="Texture" id=2]
[ext_resource path="res://Enemies/enemy1.png" type="Texture" id=3]
[ext_resource path="res://Enemies/meatball.png" type="Texture" id=4]
[ext_resource path="res://Enemies/enemy2.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "die"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("FlySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("KnifeGuySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("MeatballSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Throwing1Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10 ]
}

[node name="DeadEnemies" type="Node2D"]
script = ExtResource( 1 )

[node name="Fly" type="Node2D" parent="."]
visible = false

[node name="FlySprite" type="Sprite" parent="Fly"]
texture = ExtResource( 2 )
hframes = 8
frame = 7

[node name="FlyAnim" type="AnimationPlayer" parent="Fly"]
anims/die = SubResource( 1 )

[node name="KnifeGuy" type="Node2D" parent="."]
visible = false

[node name="KnifeGuySprite" type="Sprite" parent="KnifeGuy"]
texture = ExtResource( 3 )
hframes = 14
frame = 13

[node name="KnifeGuyAnim" type="AnimationPlayer" parent="KnifeGuy"]
anims/die = SubResource( 2 )

[node name="Meatball" type="Node2D" parent="."]
visible = false

[node name="MeatballSprite" type="Sprite" parent="Meatball"]
texture = ExtResource( 4 )
hframes = 10
frame = 9

[node name="MeatballAnim" type="AnimationPlayer" parent="Meatball"]
anims/die = SubResource( 3 )

[node name="Throwing1" type="Node2D" parent="."]

[node name="Throwing1Sprite" type="Sprite" parent="Throwing1"]
texture = ExtResource( 5 )
hframes = 11
frame = 10

[node name="Throwing1Anim" type="AnimationPlayer" parent="Throwing1"]
anims/die = SubResource( 4 )
